[ci skip] Update with fe4dc74

--- a/book/ch01.html
+++ b/book/ch01.html
@@ -39,12 +39,19 @@
 <p>この章では、サイトの要件定義と要素整理について解説します。</p>
 
 <h2><a id="h1-1"></a><span class="secno">1.1　</span>要件定義をする</h2>
-<p>サイト制作を始める前に今回のサイトについて要件定義をします。要件定義では次の内容を決めます。</p>
+<p>サイト制作を始める前に今回のサイトについて要件定義をします。要件定義という言葉を検索すると難しく見える説明が出てきます。しかし実際は次のふたつを考えれば問題ありません。</p>
 <ul>
 <li>どんなサイトを作るか</li>
 <li>どんな機能が必要か</li>
 </ul>
-<p>それぞれ大まかではなく細かく書いたほうがいいです。</p>
+<p>要件定義する時は次のように自問自答をすると、どんなサイトを作りどの機能が必要か導けます。</p>
+<ul>
+<li>質問：どんなサイトを作りたいですか。</li>
+<li>回答：「ラブライブ！」というイベントの情報を発信するサイトを作りたいです。</li>
+<li>質問：どんな情報を発信したいですか。</li>
+<li>回答：イベントの開催日・参加者・またはチケット情報などを発信したいです。また現場へ来れない人のためにネットでライブを楽しめる機能があったら便利です。</li>
+<li>回答：そして主催側としてはイベントがいろんな人に知られるとうれしいので、SNSなどで簡単に拡散できる機能が欲しいです。</li>
+</ul>
 
 <h3><a id="h1-1-1"></a>要件定義をする理由</h3>
 <p>最初に要件定義をすることで「これも入れたい」といった思いつきのアイデアに影響されず、作業が巻き戻ることを最小限に抑えられます。これにより、サイトをより良い物にする作業へ時間を割く事ができます。</p>
