[ci skip] Update with 3b90ae4

--- a/book/ch01.html
+++ b/book/ch01.html
@@ -46,11 +46,12 @@
 </ul>
 <p>要件定義する時は次のように自問自答をすると、どんなサイトを作りどの機能が必要か導けます。</p>
 <ul>
-<li>質問：どんなサイトを作りたいですか。</li>
-<li>回答：「ラブライブ！」というイベントの情報を発信するサイトを作りたいです。</li>
-<li>質問：どんな情報を発信したいですか。</li>
-<li>回答：イベントの開催日・参加者・またはチケット情報などを発信したいです。また現場へ来れない人のためにネットでライブを楽しめる機能があったら便利です。</li>
-<li>回答：そして主催側としてはイベントがいろんな人に知られるとうれしいので、SNSなどで簡単に拡散できる機能が欲しいです。</li>
+<li>質問：どんなサイトを作る？</li>
+<li>回答：「ラブライブ！」というイベントの情報を発信するサイトを作りたい</li>
+<li>質問：どんな情報を発信しよう？</li>
+<li>回答：イベントの開催日・参加者・またはチケット情報などを発信しよう</li>
+<li>回答：現場へ来れない人のためにネットでライブを楽しめる機能があったらいいかも</li>
+<li>回答：イベントがいろんな人に知られるとうれしいから、SNSなどで簡単に拡散できる機能も欲しいなー</li>
 </ul>
 
 <h3><a id="h1-1-1"></a>要件定義をする理由</h3>
