[ci skip] Update with c2b7e61

--- a/book/ch05.html
+++ b/book/ch05.html
@@ -195,7 +195,7 @@
 </div>
 
 <h2><a id="h5-6"></a><span class="secno">5.6　</span>アーティスト名と曲名部分の見た目を整える</h2>
-<p>アーティスト名と曲名部分にスタイルを適用していきます。アーティスト名部分は背景が白で上下に黄色い線が引かれているという見た目です。こちらは背景色として白色を示す<tt>#ffffff</tt>を指定します。黄色い線に関しては上下に<tt>border</tt>プロパティでスタイルを定義する事により再現可能です。</p>
+<p>アーティスト名と曲名部分にスタイルを適用していきます。アーティスト名部分は背景が白で上下に黄色い線が引かれているという見た目です。こちらは背景色として白色を示す<tt>#fff</tt>を指定します。黄色い線に関しては上下に<tt>border</tt>プロパティでスタイルを定義する事により再現可能です。</p>
 <p>曲名の左右にある括弧は、特にHTML内へ書いておく必要がないため<tt>::before</tt>と<tt>::after</tt>という擬似要素を使ってCSS側で追加します。</p>
 <div class="emlist-code">
 <pre class="emlist">/* ライブステージページ：アーティスト名 */
@@ -484,12 +484,12 @@
 <div id="livestage-pc" class="image">
 <img src="images/ch05/livestage-pc.jpg" alt="PCで見た時のラブライブ!参加者募集サイト" />
 <p class="caption">
-図5.3: PCで見た時のラブライブ!参加者募集サイト
+図5.2: PCで見た時のラブライブ!参加者募集サイト
 </p>
 </div>
 <p>また図のようにタブレットで見た時は動画が1番目立つ位置にあります。</p>
-<div id="livestage-pc" class="image">
-<img src="images/ch05/livestage-pc.jpg" alt="タブレットで見た時のラブライブ!参加者募集サイト" />
+<div id="livestage-tablet" class="image">
+<img src="images/ch05/livestage-tablet.jpg" alt="タブレットで見た時のラブライブ!参加者募集サイト" />
 <p class="caption">
 図5.3: タブレットで見た時のラブライブ!参加者募集サイト
 </p>
