--- a/book/ch04.html
+++ b/book/ch04.html
@@ -222,7 +222,7 @@
 <h2><a id="h4-6"></a><span class="secno">4.6　</span>他のJavaScriptと競合しないようにする</h2>
 <p>はじめに定義した変数や関数が他のJavaScriptと競合しないようにするため、JavaScriptのソースコード全体を無名関数で囲みます。JavaScriptは宣言した変数や関数の有効範囲（スコープ）が関数単位で閉じられるため無名関数を使います。無名関数は<tt>function() {}</tt>と書きます。ここから無名関数の全体を<tt>()</tt>で囲み最後に<tt>()</tt>を付ける事でJavaScriptを即時実行します。つまり<tt>(function() {})();</tt>となります。こうする事により無名関数内で宣言した変数や関数が他のJavaScriptへ干渉する事を防げます。このように無名関数で全体を囲み即時に実行する関数の事を即時関数と呼びます。</p>
 <p>jQueryを使う場合は<tt>(function() { ... })();</tt>の前に<tt>$</tt>を書いて最後の<tt>()</tt>を削除します。つまり<tt>$(function() { ... });</tt>となります。<tt>$</tt>を書く理由はブラウザーがHTMLを読み込んで解釈した後にJavaScriptを実行させるためです。HTMLを解釈した後にJavaScriptの実行をしない場合、JavaScript内でHTMLの要素を取得できない可能性があります。また最後の<tt>()</tt>を削除した理由は、<tt>$</tt>というのはjQueryの関数だからです。<tt>$</tt>関数の引数として関数を指定するため、最後の<tt>()</tt>がいらなくなります。</p>
-<p>続いて<tt>$(function() { ... })();</tt>の中には<tt>&quot;use strict&quot;;</tt>という文字列を書いています。これはJavaScriptをコーディングする上でミスしやすい物の一部をエラーとして検出してくれるものです。将来に備えていくつかの単語を自由に使えなくする（たとえば<tt>let</tt>や<tt>yield</tt>など）効果があるため、<tt>&quot;use strict&quot;;</tt>は書いても損はありません。</p>
+<p>続いて<tt>$(function() { ... });</tt>の中には<tt>&quot;use strict&quot;;</tt>という文字列を書いています。これはJavaScriptをコーディングする上でミスしやすい物の一部をエラーとして検出してくれるものです。将来に備えていくつかの単語を自由に使えなくする（たとえば<tt>let</tt>や<tt>yield</tt>など）効果があるため、<tt>&quot;use strict&quot;;</tt>は書いても損はありません。</p>
 <p>ここまでをまとめると次のソースコードになります。上に書いた事はなかなか覚えづらいので、JavaScriptを書く時にjQueryを使う場合は図のようにすると覚えておけば大丈夫です。</p>
 <div class="emlist-code">
 <pre class="emlist">$(function() {
@@ -237,29 +237,29 @@
 <p>JavaScriptでHTMLの要素を扱えるようにします。これはjQueryの<tt>$</tt>関数を使って、HTMLの要素をJavaScriptから次のとおり取得します。</p>
 <p>準備の節では、ブラウザーがJavaScriptをHTMLの解釈後に実行するため<tt>$</tt>関数を使いました。ここではHTMLの要素をJavaScriptで利用できるようにするため<tt>$</tt>関数を使います。jQueryの<tt>$</tt>関数はこのように万能なものとなります。</p>
 <div class="emlist-code">
-<pre class="emlist">var carouselE = $(&quot;.js-slides&quot;);
-var paginationE = $(&quot;.js-slides-pagination&quot;);
-var paginationItemElms = $(&quot;.js-slides-pagination li&quot;);
+<pre class="emlist">var carouselElement = $(&quot;.js-slides&quot;);
+var paginationElement = $(&quot;.js-slides-pagination&quot;);
+var paginationItemElements = $(&quot;.js-slides-pagination li&quot;);
 </pre>
 </div>
 
 <h2><a id="h4-8"></a><span class="secno">4.8　</span>カルーセルの実装をする</h2>
-<p>HTMLの要素を取得したらカルーセルの実装をしていきます。今回カルーセルの実装をする上でslickというライブラリを使っていきます。このslickを使えるよう初期化する関数と、どのページがいま表示されているか示すための関数を実装していきます。</p>
+<p>HTMLの要素を取得したらカルーセルの実装をしていきます。今回カルーセルの実装をする上でslickというライブラリを使っていきます。このslickを使えるよう初期化する関数と、いま表示しているページがどこか示すための関数を実装していきます。</p>
 <p>まずカルーセルの元になる<tt>Carousel</tt>関数から説明します。<tt>Carousel</tt>関数はパラメーターとして、次のふたつがあります</p>
 <ul>
-<li>カルーセルの要素を示す<tt>carouselE</tt></li>
+<li>カルーセルの要素を示す<tt>carouselElement</tt></li>
 <li>カルーセルの設定を示す<tt>config</tt></li>
 </ul>
 <p>これらのパラメーターを元に<tt>Carousel</tt>関数でslickが使えるようにします。</p>
 <p>次に<tt>currentIndex</tt>を説明します。これはページネーションで使う関数となります。<tt>currentIndex</tt>はカルーセルでいま表示しているページがどこか示す数字を返す関数です。この実装にはslickで定義されている<tt>slickCurrentSlide</tt>という関数を使います。</p>
 <div class="emlist-code">
-<pre class="emlist">function Carousel(carouselE, config) {
-  this.carouselE = carouselE;
-  carouselE.slick(config);
+<pre class="emlist">function Carousel(carouselElement, config) {
+  this.carouselElement = carouselElement;
+  carouselElement.slick(config);
 }
 
 Carousel.prototype.currentIndex = function() {
-  return this.carouselE.slick(&quot;slickCurrentSlide&quot;);
+  return this.carouselElement.slick(&quot;slickCurrentSlide&quot;);
 };
 </pre>
 </div>
@@ -268,26 +268,26 @@ Carousel.prototype.currentIndex = function() {
 <h2><a id="h4-9"></a><span class="secno">4.9　</span>ページネーションの実装をする</h2>
 <p>ページネーションの元になる<tt>CarouselPagination</tt>関数を説明します。<tt>CarouselPagination</tt>関数ではパラメーターとして、次の3つがあります。</p>
 <ul>
-<li>ページネーションの要素を示す<tt>paginationE</tt></li>
-<li>ページネーション内の要素を示す<tt>paginationItemElms</tt></li>
+<li>ページネーションの要素を示す<tt>paginationElement</tt></li>
+<li>ページネーション内の要素を示す<tt>paginationItemElements</tt></li>
 <li>アクティブなページを示す<tt>activePageName</tt></li>
 </ul>
 <p>これらのパラメーターを元に<tt>CarouselPagination</tt>関数でページネーションが使えるようにします。あとはカルーセルの表示切り替え時に<tt>activatePage</tt>関数と<tt>deactivatePage</tt>関数を呼び出してページネーションの表示を変えられるようにします。</p>
 <div class="emlist-code">
-<pre class="emlist">function CarouselPagination(paginationE, paginationItemElms, activePageName) {
+<pre class="emlist">function CarouselPagination(paginationElement, paginationItemElements, activePageName) {
   this.activePageName = activePageName;
-  this.paginationE = paginationE;
-  this.paginationItemElms = paginationItemElms;
+  this.paginationElement = paginationElement;
+  this.paginationItemElements = paginationItemElements;
 }
 
 CarouselPagination.prototype.activatePage = function(index) {
-  this.paginationItemElms[index].classList.add(this.activePageName);
+  this.paginationItemElements[index].classList.add(this.activePageName);
 };
 
 CarouselPagination.prototype.deactivatePage = function() {
   var _this = this;
 
-  Array.prototype.map.call(this.paginationItemElms, function(paginationItemE) {
+  Array.prototype.map.call(this.paginationItemElements, function(paginationItemE) {
     paginationItemE.classList.remove(_this.activePageName);
   });
 };
@@ -303,7 +303,7 @@ CarouselPagination.prototype.deactivatePage = function() {
 <li>arrows：前・次へボタンを表示するか</li>
 </ul>
 <div class="emlist-code">
-<pre class="emlist">var carousel = new Carousel(carouselE, {
+<pre class="emlist">var carousel = new Carousel(carouselElement, {
   autoplay: true,
   autoplaySpeed: 5000,
   arrows: false
@@ -312,9 +312,9 @@ CarouselPagination.prototype.deactivatePage = function() {
 </div>
 
 <h2><a id="h4-11"></a><span class="secno">4.11　</span>ページネーションが動くようにする</h2>
-<p>カルーセルと同じように、実装したページネーションを次のとおり呼び出してページネーションを動かします。ページネーションの初期設定として、現在アクティブであることを示すクラス名が最初のドットへ付くようにします。</p>
+<p>カルーセルと同じように、実装したページネーションを次のとおり呼び出してページネーションを動かします。ページネーションの初期設定として、ページネーション内はじめの<tt>li</tt>要素に現在アクティブであることを示すクラス名が付くようにします。</p>
 <div class="emlist-code">
-<pre class="emlist">var carouselPagination = new CarouselPagination(paginationE, paginationItemElms, &quot;ll-slides-pagination__active&quot;);
+<pre class="emlist">var carouselPagination = new CarouselPagination(paginationElement, paginationItemElements, &quot;ll-slides-pagination__active&quot;);
 carouselPagination.activatePage(carousel.currentIndex());
 </pre>
 </div>
@@ -322,7 +322,7 @@ carouselPagination.activatePage(carousel.currentIndex());
 <h2><a id="h4-12"></a><span class="secno">4.12　</span>カルーセル表示が切り替わったときの処理を設定する</h2>
 <p>カルーセル表示が切り替わったときに、連動してページネーションの表示を切り替えるようにします。この実装にはslickで定義されている<tt>afterChange</tt>というイベントをjQueryの<tt>on</tt>関数を使って拾えるようにします。</p>
 <div class="emlist-code">
-<pre class="emlist">carouselE.on(&quot;afterChange&quot;, function() {
+<pre class="emlist">carouselElement.on(&quot;afterChange&quot;, function() {
   carouselPagination.deactivatePage();
   carouselPagination.activatePage(carousel.currentIndex());
 });
@@ -337,51 +337,51 @@ carouselPagination.activatePage(carousel.currentIndex());
 
   //////////////////////////////////////////////////
 
-  function Carousel(carouselE, config) {
-    this.carouselE = carouselE;
-    carouselE.slick(config);
+  function Carousel(carouselElement, config) {
+    this.carouselElement = carouselElement;
+    carouselElement.slick(config);
   }
 
   Carousel.prototype.currentIndex = function() {
-    return this.carouselE.slick(&quot;slickCurrentSlide&quot;);
+    return this.carouselElement.slick(&quot;slickCurrentSlide&quot;);
   };
 
   //////////////////////////////////////////////////
 
-  function CarouselPagination(paginationE, paginationItemElms, activePageName) {
+  function CarouselPagination(paginationElement, paginationItemElements, activePageName) {
     this.activePageName = activePageName;
-    this.paginationE = paginationE;
-    this.paginationItemElms = paginationItemElms;
+    this.paginationElement = paginationElement;
+    this.paginationItemElements = paginationItemElements;
   }
 
   CarouselPagination.prototype.activatePage = function(index) {
-    this.paginationItemElms[index].classList.add(this.activePageName);
+    this.paginationItemElements[index].classList.add(this.activePageName);
   };
 
   CarouselPagination.prototype.deactivatePage = function() {
     var _this = this;
 
-    Array.prototype.map.call(this.paginationItemElms, function(paginationItemE) {
+    Array.prototype.map.call(this.paginationItemElements, function(paginationItemE) {
       paginationItemE.classList.remove(_this.activePageName);
     });
   };
 
   //////////////////////////////////////////////////
 
-  var carouselE = $(&quot;.js-slides&quot;);
-  var paginationE = $(&quot;.js-slides-pagination&quot;);
-  var paginationItemElms = $(&quot;.js-slides-pagination li&quot;);
+  var carouselElement = $(&quot;.js-slides&quot;);
+  var paginationElement = $(&quot;.js-slides-pagination&quot;);
+  var paginationItemElements = $(&quot;.js-slides-pagination li&quot;);
 
-  var carousel = new Carousel(carouselE, {
+  var carousel = new Carousel(carouselElement, {
     autoplay: true,
     autoplaySpeed: 5000,
     arrows: false
   });
 
-  var carouselPagination = new CarouselPagination(paginationE, paginationItemElms, &quot;ll-slides-pagination__active&quot;);
+  var carouselPagination = new CarouselPagination(paginationElement, paginationItemElements, &quot;ll-slides-pagination__active&quot;);
   carouselPagination.activatePage(carousel.currentIndex());
 
-  carouselE.on(&quot;afterChange&quot;, function() {
+  carouselElement.on(&quot;afterChange&quot;, function() {
     carouselPagination.deactivatePage();
     carouselPagination.activatePage(carousel.currentIndex());
   });
