[ci skip] Update with ec5b764

--- a/book/ch01.html
+++ b/book/ch01.html
@@ -57,8 +57,8 @@
 <h3><a id="h1-1-1"></a>要件定義をする理由</h3>
 <p>最初に要件定義をすることで「これも入れたい」といった思いつきのアイデアに影響されず、作業が巻き戻ることを最小限に抑えられます。これにより、サイトをより良い物にする作業へ時間を割く事ができます。</p>
 
-<h3><a id="h1-1-2"></a>ラブライブ!参加者募集サイトの要件定義</h3>
-<p>では実際に要件定義をしていきます。まずどんなサイトを作るかというところから始めます。今回は「ラブライブ!」というアイドルコンテストの参加者募集サイトを作ります。</p>
+<h3><a id="h1-1-2"></a>ラブライブ！参加者募集サイトの要件定義</h3>
+<p>では実際に要件定義をしていきます。まずどんなサイトを作るかというところから始めます。今回は「ラブライブ！」というアイドルコンテストの参加者募集サイトを作ります。</p>
 <p>手順としてはまずターゲットユーザーを定義します。そしてターゲットユーザーにどんな体験を与えたいのか考えます。今回は主に見てもらいたいユーザーとして、スクールアイドルが挙げられます。この参加者募集サイトを見た後にスクールアイドルが応募してくれるような体験を作ることが大事です。</p>
 <p>次に機能です。今回は工数・スケジュールを考えた結果、トップページとライブ中継ページの2ページのみ作ることにしました。このように期限と開発期間から現実的な範囲で判断する事も要件定義の一部となります。</p>
 
@@ -93,7 +93,7 @@
 <p>字面どおりサイトのトップページを意味します。ユーザーがサイトを見ている時、どのページにいたとしても1クリックでトップページへ戻れます。サイトを見る時の習慣に準じて一番見やすい左上へ置いたのは、ターゲットユーザーにとって一番大事、一番クリックしてほしいという理由があります。</p>
 
 <h4><a id="h1-2-1-2"></a>LIVE STAGE</h4>
-<p>ラブライブ!の状況をネットで生中継するページだと思われます。参加するアイドルグループが見る、OUTLINEやSCHEDULEより左に位置しています。これは一体どういうことでしょうか？これは参加するアイドルグループの他に、ライブをネット上で見るファンも大事という考えがあると思います。ライブステージページ内にある要素をアニメのキャプチャ画像から推測してみると、以下の要素で構成されているように見えます。</p>
+<p>ラブライブ！の状況をネットで生中継するページだと思われます。参加するアイドルグループが見る、OUTLINEやSCHEDULEより左に位置しています。これは一体どういうことでしょうか？これは参加するアイドルグループの他に、ライブをネット上で見るファンも大事という考えがあると思います。ライブステージページ内にある要素をアニメのキャプチャ画像から推測してみると、以下の要素で構成されているように見えます。</p>
 <ul>
 <li>映像タイトル</li>
 <li>出演者</li>
