--- a/book/ch02.html
+++ b/book/ch02.html
@@ -36,10 +36,10 @@
             </ul>
 
             <h1><a id="h2"></a><span class="secno">第2章　</span>サイト開発の準備</h1>
-<p>この章ではラブライブ!参加者募集サイトを実装する前の準備について書きます。</p>
+<p>この章ではラブライブ！参加者募集サイトを実装する前の準備について書きます。</p>
 
 <h2><a id="h2-1"></a><span class="secno">2.1　</span>必要なツールの準備</h2>
-<p>はじめに、ラブライブ!参加者募集サイトの実装で必要なツールを準備します。最低限必要なものを列挙していくと以下のものがあります。</p>
+<p>はじめに、ラブライブ！参加者募集サイトの実装で必要なツールを準備します。最低限必要なものを列挙していくと以下のものがあります。</p>
 <ul>
 <li>ソースコードを書くためのエディターもしくはIDE</li>
 <li>表示確認用のブラウザー</li>
@@ -124,8 +124,8 @@
 <h2><a id="h2-4"></a><span class="secno">2.4　</span>ライブラリの選定CSS編</h2>
 <p>ここまでライブラリ選定時の基準について書いてきました。ここからは実際にライブラリ選定をしていきます。はじめにCSSのライブラリから選定していきます。</p>
 <p>今回CSSのライブラリは<a href="https://github.com/twbs/bootstrap" class="link">Bootstrap</a>のテーマである<a href="http://kubosho.github.io/Nico/" class="link">Nico</a>を使います。</p>
-<p>選定した理由としては、今回デザイナーがいない中ラブライブ!参加者募集サイトの見た目をアニメに近づけたいという思いがありました。ラブライブ!参加者募集サイトは、Bootstrapを使って作られたサイトの見た目に似ているためBootstrapを使うことにしました。</p>
-<p>ラブライブ!参加者募集サイトはピンク系の配色なのですが、Bootstrap本体はピンク系の配色ではありません。なので今回のために<a href="http://honokak.osaka/" class="link">Honoka - 日本語も美しく表示できるBootstrapテーマ</a>を元にNicoというBootstrapのテーマを作りました。</p>
+<p>選定した理由としては、今回デザイナーがいない中ラブライブ！参加者募集サイトの見た目をアニメに近づけたいという思いがありました。ラブライブ！参加者募集サイトは、Bootstrapを使って作られたサイトの見た目に似ているためBootstrapを使うことにしました。</p>
+<p>ラブライブ！参加者募集サイトはピンク系の配色なのですが、Bootstrap本体はピンク系の配色ではありません。なので今回のために<a href="http://honokak.osaka/" class="link">Honoka - 日本語も美しく表示できるBootstrapテーマ</a>を元にNicoというBootstrapのテーマを作りました。</p>
 
 <h2><a id="h2-5"></a><span class="secno">2.5　</span>ライブラリの選定JavaScript編</h2>
 <p>次にJavaScriptのライブラリを選定していきます。今回JavaScript側で実装する機能として、カルーセルがあります。</p>
