--- a/book/ch04.html
+++ b/book/ch04.html
@@ -48,8 +48,8 @@
 <p>今回カルーセルの実装に<a href="http://kenwheeler.github.io/slick/" class="link">slick</a>というライブラリを使います。slick用として次のHTMLを用意します。とはいっても切り替え表示させる画像を<tt>js-slides ll-slides</tt>というクラスを付けた<tt>div</tt>要素で囲むだけです。接頭辞に<tt>js-</tt>と付けているクラスはJavaScriptから触る事を明確にするため付けています。</p>
 <div class="emlist-code">
 <pre class="emlist">&lt;div class=&quot;js-slides ll-slides&quot;&gt;
-  &lt;img src=&quot;images/image_01.jpg&quot; alt=&quot;ラブライブ! 2nd グランプリ μ's&quot;&gt;
-  &lt;img src=&quot;images/image_02.jpg&quot; alt=&quot;ラブライブ! 1st グランプリ A-RISE&quot;&gt;
+  &lt;img src=&quot;images/image_01.jpg&quot; alt=&quot;ラブライブ！ 2nd グランプリ μ's&quot;&gt;
+  &lt;img src=&quot;images/image_02.jpg&quot; alt=&quot;ラブライブ！ 1st グランプリ A-RISE&quot;&gt;
 &lt;/div&gt;
 </pre>
 </div>
