--- a/book/ch05.html
+++ b/book/ch05.html
@@ -482,16 +482,16 @@
 <p>スクリーンショットは次のとおりになります。</p>
 <p>図のようにPCで見た時は横に並んで各要素が表示されています。</p>
 <div id="livestage-pc" class="image">
-<img src="images/ch05/livestage-pc.jpg" alt="PCで見た時のラブライブ!参加者募集サイト" />
+<img src="images/ch05/livestage-pc.jpg" alt="PCで見た時のラブライブ！参加者募集サイト" />
 <p class="caption">
-図5.2: PCで見た時のラブライブ!参加者募集サイト
+図5.2: PCで見た時のラブライブ！参加者募集サイト
 </p>
 </div>
 <p>また図のようにタブレットで見た時は動画が1番目立つ位置にあります。</p>
 <div id="livestage-tablet" class="image">
-<img src="images/ch05/livestage-tablet.jpg" alt="タブレットで見た時のラブライブ!参加者募集サイト" />
+<img src="images/ch05/livestage-tablet.jpg" alt="タブレットで見た時のラブライブ！参加者募集サイト" />
 <p class="caption">
-図5.3: タブレットで見た時のラブライブ!参加者募集サイト
+図5.3: タブレットで見た時のラブライブ！参加者募集サイト
 </p>
 </div>
 
