[ci skip] Update with 85bd743

--- a/book/ch01.html
+++ b/book/ch01.html
@@ -66,7 +66,7 @@
 <p>サイト内のボタン・画像・テキストなど、さまざまな表示・動作する情報を「要素」と呼びます。どの要素をどの位置へ置くかは、設計者が最も合理的だと考えた場所になります。そのため要素を置く場所が合理的なのか判断するため、ターゲットユーザーの分析が必要となります。ユーザーが「最も合理的」と感じる方向に向かって、さまざまなことを考え設計するべきです。たとえば以下のことが考えられます。</p>
 <ul>
 <li>ターゲットユーザーがよく使いそうなボタン・機能をクリックしやすいところへ置く</li>
-<li>ユーザーへ一伝えたいことを見やすいところに置く</li>
+<li>ユーザーへ1番伝えたいことを見やすいところに置く</li>
 </ul>
 
 <h3><a id="h1-2-1"></a>今回の要素について整理</h3>
