[ci skip] Update with 5fe1464

--- a/book/ch01.html
+++ b/book/ch01.html
@@ -49,7 +49,7 @@
 <li>質問：どんなサイトを作る？</li>
 <li>回答：「ラブライブ！」というイベントの情報を発信するサイトを作りたい</li>
 <li>質問：どんな情報を発信しよう？</li>
-<li>回答：イベントの開催日・参加者・またはチケット情報などを発信しよう</li>
+<li>回答：イベントの開催日や参加者、チケット情報などを発信しよう</li>
 <li>回答：現場へ来れない人のためにネットでライブを楽しめる機能があったらいいかも</li>
 <li>回答：イベントがいろんな人に知られるとうれしいから、SNSなどで簡単に拡散できる機能も欲しいなー</li>
 </ul>
@@ -60,12 +60,12 @@
 <h3><a id="h1-1-2"></a>ラブライブ！参加者募集サイトの要件定義</h3>
 <p>では実際に要件定義をしていきます。まずどんなサイトを作るかというところから始めます。今回は「ラブライブ！」というアイドルコンテストの参加者募集サイトを作ります。</p>
 <p>手順としてはまずターゲットユーザーを定義します。そしてターゲットユーザーにどんな体験を与えたいのか考えます。今回は主に見てもらいたいユーザーとして、スクールアイドルが挙げられます。この参加者募集サイトを見た後にスクールアイドルが応募してくれるような体験を作ることが大事です。</p>
-<p>次に機能です。今回は工数・スケジュールを考えた結果、トップページとライブ中継ページの2ページのみ作ることにしました。このように期限と開発期間から現実的な範囲で判断する事も要件定義の一部となります。</p>
+<p>次に機能です。今回は工数やスケジュールを考えた結果、トップページとライブ中継ページの2ページのみ作ることにしました。このように期限と開発期間から現実的な範囲で判断する事も要件定義の一部となります。</p>
 
 <h2><a id="h1-2"></a><span class="secno">1.2　</span>要素を整理する</h2>
-<p>サイト内のボタン・画像・テキストなど、さまざまな表示・動作する情報を「要素」と呼びます。どの要素をどの位置へ置くかは、設計者が最も合理的だと考えた場所になります。そのため要素を置く場所が合理的なのか判断するため、ターゲットユーザーの分析が必要となります。ユーザーが「最も合理的」と感じる方向に向かって、さまざまなことを考え設計するべきです。たとえば以下のことが考えられます。</p>
+<p>サイト内のボタンや画像、テキストなどさまざまな表示、動作する情報を「要素」と呼びます。どの要素をどの位置へ置くかは、設計者が最も合理的だと考えた場所になります。そのため要素を置く場所が合理的なのか判断するため、ターゲットユーザーの分析が必要となります。ユーザーが「最も合理的」と感じる方向に向かって、さまざまなことを考え設計するべきです。たとえば以下のことが考えられます。</p>
 <ul>
-<li>ターゲットユーザーがよく使いそうなボタン・機能をクリックしやすいところへ置く</li>
+<li>ターゲットユーザーがよく使いそうなボタンや機能をクリックしやすいところへ置く</li>
 <li>ユーザーへ1番伝えたいことを見やすいところに置く</li>
 </ul>
 
@@ -103,7 +103,7 @@
 <li>投票</li>
 <li>広告スペース</li>
 </ul>
-<p>ここで最初に書いた要件定義を思い出しましょう。今回は「工数・スケジュールを考えた結果、トップページとライブ中継ページの2ページのみ作る」ということでした。つまり他のページについて要素整理は必要なく、ここで終わらせることができます。今回、どこまで資料が必要なのかは要件定義の段階で明確にしていました。そのため余計な作業はなくなり、効率的に開発を進める事ができます。</p>
+<p>ここで最初に書いた要件定義を思い出しましょう。今回は「工数やスケジュールを考えた結果、トップページとライブ中継ページの2ページのみ作る」ということでした。つまり他のページについて要素整理は必要なく、ここで終わらせることができます。今回、どこまで資料が必要なのかは要件定義の段階で明確にしていました。そのため余計な作業はなくなり、効率的に開発を進める事ができます。</p>
 <p>ここからは今回のサイトについて推測を書いていきます。よければ参考にしてください。</p>
 
 <h4><a id="h1-2-1-3"></a>OUTLINE</h4>
@@ -147,12 +147,12 @@
 <p>ワイヤーフレームはサイト内にある要素の種類・数・位置を示す物です。仕様書は要素の具体的な表示方法や演出をどうするか明記する物です。場合によっては、ワイヤーフレームと仕様書両方をまとめたり分けて書きます。</p>
 <p>サイトの内容が豊かであればあるほど仕様書も内容は多くなります。その時は分けて書くことをおすすめします。また1ページごとにワイヤーフレームと仕様書は必要です。</p>
 <p>ワイヤーフレームはPowerPointとExcelのどちらか好きなほうを使います。仕様書はExcelをおすすめします。ワイヤーフレームや仕様書は作る際に3つ気をつけたいことがあります。それらを、ひとつずつ解説していきます。</p>
-<p>はじめに気をつける事として、要素は色もしくは形で分けるように書くことです。ワイヤーフレームの要素は大きく分けて画像・テキスト・ボタンの3種類に分けられます。さらに動作の要素を入れると、スクロール・ポップアップなどがあります。これらを見分けがつくように分けて書くことをおすすめします。</p>
+<p>はじめに気をつける事として、要素は色もしくは形で分けるように書くことです。ワイヤーフレームの要素は大きく分けて画像・テキスト・ボタンの3種類に分けられます。さらに動作の要素を入れると、スクロールやポップアップなどがあります。これらを見分けがつくように分けて書くことをおすすめします。</p>
 <p>次に気をつける事として、ワイヤーフレームに余計な情報を入れないということです。ワイヤーフレームはあくまで要素がページ内のどこにあるか示す資料です。そのため色など不要な情報はなるべく入れないほうがいいです。なぜならデザイナーはグラフィックとUIの制作に、参考資料としてワイヤーフレームを使うためです。余計な情報があると資料は分かりづらくなり混乱を招きます。グラフィックやUIの方向性を決めるのはアートディレクターの仕事なので、企画資料としては見やすいようにすることが最優先です。</p>
-<p>最後に気をつける事として、仕様書は箇条書きにすることです。それぞれの要素・動作に対して、箇条書きする必要があります。仕様書を見るエンジニアにとって不明な点がない状態でコーディングできるよう目指します。</p>
+<p>最後に気をつける事として、仕様書は箇条書きにすることです。それぞれの要素や動作に対して、箇条書きする必要があります。仕様書を見るエンジニアにとって不明な点がない状態でコーディングできるよう目指します。</p>
 
 <h2><a id="h1-5"></a><span class="secno">1.5　</span>今回のワイヤーフレームと仕様書について</h2>
-<p>要件定義の段階で判明していましたが今回はページ数・要素共に少ないです。そのためワイヤーフレームと仕様書をまとめて書きました。1ページずつ見ていきましょう。</p>
+<p>要件定義の段階で判明していましたが今回はページ数と要素の両方とも少ないです。そのためワイヤーフレームと仕様書をまとめて書きました。1ページずつ見ていきましょう。</p>
 
 <h3><a id="h1-5-1"></a>トップページのワイヤーフレームと仕様</h3>
 <div id="lovelive-screenshot-top" class="image">
@@ -161,7 +161,7 @@
 図1.4: トップページ（ラブライブ！第2期 1話より）© プロジェクトラブライブ！
 </p>
 </div>
-<p>画像から推測すると、共通のヘッダー・グローバルナビゲーション・フッター以外は画像表示のみに見えます。トップページで訴求したいことは以下のふたつになると思います。これは華やかな画像をいっぱい見られるようにする意図があると思われます。</p>
+<p>画像から推測すると、共通のヘッダーやグローバルナビゲーション、フッター以外は画像表示のみに見えます。トップページで訴求したいことは以下のふたつになると思います。これは華やかな画像をいっぱい見られるようにする意図があると思われます。</p>
 <ul>
 <li>コンテストの盛り上がり</li>
 <li>歴代受賞者の宣伝</li>
