--- a/book/ch02.html
+++ b/book/ch02.html
@@ -50,7 +50,7 @@
 <h3><a id="h2-1-1"></a>エディターもしくはIDE</h3>
 <p>はじめに、ソースコードを書くためのエディターもしくはIDE（統合開発環境）を用意します。エディターとIDEですが、エディターはIDEと比べて自分で設定できる部分が多いです。そのため拡張性はエディターのほうが高いです。その分エディターの設定に時間がかかってしまう事もあります。IDEはインストールした時からある程度の設定がされています。その代わりエディターと比べて拡張性は低いです。</p>
 <p>なのでより自分好みの設定にしたい場合はエディターを、設定をいろいろいじるのが面倒な場合はIDEを使うといいです。</p>
-<p>エディターはWindows・OS X共にAtomやSublime Textがよく使われています。IDEはWebStormやNetBeans、Visual Studio Community Editionがよく使われています。</p>
+<p>エディターはWindowsとOS X共にAtomやSublime Textがよく使われています。IDEはWebStormやNetBeans、Visual Studio Community Editionがよく使われています。</p>
 
 <h3><a id="h2-1-2"></a>ブラウザー</h3>
 <p>次に、サイトを表示確認するためにブラウザーの用意をします。WindowsやOS Xの最新バージョンには次のブラウザーが最初からインストールされています。</p>
@@ -103,7 +103,7 @@
 <p>たとえばCSSのライブラリである<a href="http://getbootstrap.com/" class="link">Bootstrap</a>だとページ下部にBootstrapを使ったサイト一覧が掲載されています。JavaScriptのライブラリである<a href="http://jquery.com/" class="link">jQuery</a>は<a href="http://www.amazon.co.jp/s/field-keywords=jquery" class="link">Amazon上でjQueryで検索</a>するとjQuery関連の本が大量に表示されます。</p>
 <p>このように、利用実績やライブラリについて本が書かれているかということをまず見ます。</p>
 
-<h4><a id="h2-3-2-2"></a>Issue・Pull Request、そして最新コミット日時</h4>
+<h4><a id="h2-3-2-2"></a>IssueやPull Request、最新コミット日時</h4>
 <p>次に、GitHub上にあるIssueやPull Requestの件数と最新コミット日時です。利用実績で見るのは公開されてからある程度時間が経過し、広く使われるようになったライブラリのみ使える判断材料です。つまり定番と言われるライブラリに対してのみ判断材料として使えます。</p>
 <p>そこでIssueやPull Requestの件数と最新コミット日時を見ます。たとえば最新コミット日が6か月前だった場合、IssueやPull Requestの多さは「放置されているから」ということになります。放置されたライブラリを使う場合、自分達でなんとかしないといけなくなる場面が増えてしまいます。</p>
 <p>自分達でなんとかするのであればいいですが、そうでない場合は活発なライブラリを選ぶのがいいです。</p>
