[ci skip] Update with 136e7da

--- a/book/ch02.html
+++ b/book/ch02.html
@@ -68,7 +68,7 @@
 <p>また開発者向けに提供されている開発版をインストールしたほうが、事前に次期バージョンでハマりそうな点が分かるのでおすすめです。</p>
 
 <h3><a id="h2-1-3"></a>GitとGitHub</h3>
-<p>最後に、作業履歴を管理するためGitとGitHubを用意します。たとえば突然PCがブルースクリーンになってしまい、予期しないシャットダウンをしなければいけなくなったとします。その時Gitに作業履歴が残っていれば、かなり前の作業まで遡ってしまうことが少なくなります。GitはSourceTreeをダウンロードして使うのが良いでしょう。もしGitについてあまり知らない場合は、拙著のSteins;Gitを読んでみてください。</p>
+<p>最後に、作業履歴を管理するためGitとGitHubを用意します。たとえば突然PCがブルースクリーンになってしまい、予期しないシャットダウンをしなければいけなくなったとします。その時Gitに作業履歴が残っていれば、かなり前の作業まで遡ってしまうことが少なくなります。GitはSourceTreeをダウンロードして使うのがいいでしょう。もしGitについてあまり知らない場合は、拙著のSteins;Gitを読んでみてください。</p>
 
 <h2><a id="h2-2"></a><span class="secno">2.2　</span>分からないことがあった時には？</h2>
 <p>サイトの実装をしていくうちに、分からないところが出てくる場合もあります。</p>
