--- a/book/ch05.html
+++ b/book/ch05.html
@@ -40,7 +40,7 @@
 
 <h2><a id="h5-1"></a><span class="secno">5.1　</span>動画部分のマークアップ</h2>
 <p>動画部分のマークアップをしていきます。アーティスト名と曲名部分にCSSを適用させるため、それぞれ<tt>span</tt>要素で括ります。</p>
-<p>今回動画はYouTubeにある物を使います。YouTubeの動画をページ内へ埋め込む方法は図のようにYouTubeの「共有」内の「埋め込みコード」をコピーしてHTML内に貼り付けます。</p>
+<p>今回動画はYouTubeにあるものを使います。YouTubeの動画をページ内へ埋め込む方法は図のようにYouTubeの「共有」内の「埋め込みコード」をコピーしてHTML内に貼り付けます。</p>
 <div id="video-share" class="image">
 <img src="images/ch05/video-share.jpg" alt="YouTubeの埋め込みコードをHTML内にコピー&amp;amp;ペーストする" />
 <p class="caption">
@@ -253,7 +253,7 @@
 }
 </pre>
 </div>
-<p>次に動画の情報表示を切り替えるタブをグローバルナビゲーションと同じような見た目にしていきます。とはいえBootstrap内でグローバルナビゲーションとタブ部分に対し同じスタイルが適用されているわけではありません。そのためスタイル定義が少し違う物になります。</p>
+<p>次に動画の情報表示を切り替えるタブをグローバルナビゲーションと同じような見た目にしていきます。とはいえBootstrap内でグローバルナビゲーションとタブ部分に対し同じスタイルが適用されているわけではありません。そのためスタイル定義が少し違うものになります。</p>
 <div class="emlist-code">
 <pre class="emlist">/* ライブステージページ：動画の情報タブ */
 .ll-video-tabs {
